@@ -1,3 +1,3 @@
-"pa_ulex.ml": camlp4orf, use_camlp4
+"pa_ulex.ml": package(camlp5), camlp5orf
 <test.*> or "custom_ulexing.ml": use_ulex
 # true: use_ulex
